--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/common": "^9.4.3",
     "@nestjs/core": "^9.4.3",
     "@nestjs/platform-express": "^9.4.3",
+    "mathjs": "^12.4.2",
+    "pnpm": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
